--- a/partners.html
+++ b/partners.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="files/swiper.min.css?_v=20230424163914">
-    <link rel="stylesheet" href="css/style.min.css?_v=20230424163914">
+    <link rel="stylesheet" href="files/swiper.min.css?_v=20230426104837">
+    <link rel="stylesheet" href="css/style.min.css?_v=20230426104837">
     <title>partners</title>
 </head>
 
@@ -33,7 +33,7 @@
             </ul>
             <div class="menu-icon"><span></span></div>
         </nav>
-        <button class="sign-in icon-arrow-right">sign in</button>
+        <button class="sign-in icon-arrow-right _sign">sign in</button>
     </div>
 </header>
     <main>
@@ -44,53 +44,187 @@
             </div>
         </section>
         <section class="partner-descr">
-            <picture><source srcset="img/gradients/partners.webp" type="image/webp"><img src="img/gradients/partners.png" alt="background gradient" class="partner-gradient"></picture>
+            <img src="img/gradients/partners.svg" alt="background gradient" class="partner-gradient">
             <div class="text-container">
                 <picture><source srcset="img/border-top.webp" type="image/webp"><img src="img/border-top.png" alt="border-top"></picture>
                 <div class="text-descr">Join to our partners, read author's analytics, explore the world of trading and cryptocurrencies.</div>
             </div>
             <div class="partner-slider">
                 <div class="slider-container">
-                    <div class="slider-titles">
-                        <ul class="slider-list">
-                            <li><button class="slider-btn">Cryptomaximum Group</button></li>
-                            <li><button class="slider-btn">Solo</button></li>
-                            <li><button class="slider-btn">CryptoArk</button></li>
-                            <li><button class="slider-btn">Vilarso</button></li>
-                            <li><button class="slider-btn">Ego trading</button></li>
-                            <li><button class="slider-btn">Litvinoff trade</button></li>
-                            <li><button class="slider-btn">Schpicer official</button></li>
-                            <li><button class="slider-btn">Dnevnik Sereji</button></li>
-                            <li><button class="slider-btn">Ivan Alekseev</button></li>
-                        </ul>
-                    </div>
-                    <div class="slider-block _slider">
+                    <div class="slider-block partners-slider swiper">
                         <div class="slider-btns">
                             <button class="prew-slide icon-arrow-up"></button>
                             <button class="next-slide icon-arrow-up"></button>
                         </div>
-                        <div class="slider-wrapper _slider-wrapper">
-                            <div class="slider-field _slider-field">
-                                <div class="slide">
-                                    <div class="slide-title">Cryptomaximum <br> Group</div>
-                                    <ul class="slide-list">
-                                        <li class="list-item">Team of professional tradersin the stock and cryptocurrency markets</li>
-                                        <li class="list-item">Crypto startup advisors</li>
-                                        <li class="list-item">Training and sales teams</li>
-                                        <li class="list-item">Cryptocurrency media</li>
-                                    </ul>
-                                    <div class="slide-footer">
-                                        <div class="slide-social">
-                                            <a href="#" class="social-item icon-twitter"></a>
-                                            <a href="#" class="social-item icon-facebook-f"></a>
-                                            <a href="#" class="social-item icon-vk"></a>
-                                        </div>
-                                        <a href="#" class="footer-link">cryptomax.io</a>
+                        <div class="slider-titles">
+                            <ul class="slider-list">
+                                <li><button class="slider-btn">Cryptomaximum Group</button></li>
+                                <li><button class="slider-btn">Solo</button></li>
+                                <li><button class="slider-btn">CryptoArk</button></li>
+                                <li><button class="slider-btn">Vilarso</button></li>
+                                <li><button class="slider-btn">Ego trading</button></li>
+                                <li><button class="slider-btn">Litvinoff trade</button></li>
+                                <li><button class="slider-btn">Schpicer official</button></li>
+                                <li><button class="slider-btn">Dnevnik Sereji</button></li>
+                                <li><button class="slider-btn">Ivan Alekseev</button></li>
+                            </ul>
+                        </div>
+                        <div class="slider-wrapper swiper-wrapper">
+                            <div class="slide swiper-slide">
+                                <div class="slide-title">Cryptomaximum <br> Group</div>
+                                <ul class="slide-list">
+                                    <li class="list-item">Team of professional tradersin the stock and cryptocurrency markets</li>
+                                    <li class="list-item">Crypto startup advisors</li>
+                                    <li class="list-item">Training and sales teams</li>
+                                    <li class="list-item">Cryptocurrency media</li>
+                                </ul>
+                                <div class="slide-footer">
+                                    <div class="slide-social">
+                                        <a href="#" class="social-item icon-twitter"></a>
+                                        <a href="#" class="social-item icon-facebook-f"></a>
+                                        <a href="#" class="social-item icon-vk"></a>
                                     </div>
+                                    <a href="#" class="footer-link">cryptomax.io</a>
+                                </div>
+                            </div>
+                            <div class="slide swiper-slide">
+                                <div class="slide-title">Solo</div>
+                                <ul class="slide-list">
+                                    <li class="list-item">Team of professional tradersin the stock and cryptocurrency markets</li>
+                                    <li class="list-item">Crypto startup advisors</li>
+                                    <li class="list-item">Training and sales teams</li>
+                                    <li class="list-item">Cryptocurrency media</li>
+                                </ul>
+                                <div class="slide-footer">
+                                    <div class="slide-social">
+                                        <a href="#" class="social-item icon-twitter"></a>
+                                        <a href="#" class="social-item icon-facebook-f"></a>
+                                        <a href="#" class="social-item icon-vk"></a>
+                                    </div>
+                                    <a href="#" class="footer-link">cryptomax.io</a>
+                                </div>
+                            </div>
+                            <div class="slide swiper-slide">
+                                <div class="slide-title">CryptoArk</div>
+                                <ul class="slide-list">
+                                    <li class="list-item">Team of professional tradersin the stock and cryptocurrency markets</li>
+                                    <li class="list-item">Crypto startup advisors</li>
+                                    <li class="list-item">Training and sales teams</li>
+                                    <li class="list-item">Cryptocurrency media</li>
+                                </ul>
+                                <div class="slide-footer">
+                                    <div class="slide-social">
+                                        <a href="#" class="social-item icon-twitter"></a>
+                                        <a href="#" class="social-item icon-facebook-f"></a>
+                                        <a href="#" class="social-item icon-vk"></a>
+                                    </div>
+                                    <a href="#" class="footer-link">cryptomax.io</a>
+                                </div>
+                            </div>
+                            <div class="slide swiper-slide">
+                                <div class="slide-title">Vilarso</div>
+                                <ul class="slide-list">
+                                    <li class="list-item">Team of professional tradersin the stock and cryptocurrency markets</li>
+                                    <li class="list-item">Crypto startup advisors</li>
+                                    <li class="list-item">Training and sales teams</li>
+                                    <li class="list-item">Cryptocurrency media</li>
+                                </ul>
+                                <div class="slide-footer">
+                                    <div class="slide-social">
+                                        <a href="#" class="social-item icon-twitter"></a>
+                                        <a href="#" class="social-item icon-facebook-f"></a>
+                                        <a href="#" class="social-item icon-vk"></a>
+                                    </div>
+                                    <a href="#" class="footer-link">cryptomax.io</a>
+                                </div>
+                            </div>
+                            <div class="slide swiper-slide">
+                                <div class="slide-title">Ego <br> trading</div>
+                                <ul class="slide-list">
+                                    <li class="list-item">Team of professional tradersin the stock and cryptocurrency markets</li>
+                                    <li class="list-item">Crypto startup advisors</li>
+                                    <li class="list-item">Training and sales teams</li>
+                                    <li class="list-item">Cryptocurrency media</li>
+                                </ul>
+                                <div class="slide-footer">
+                                    <div class="slide-social">
+                                        <a href="#" class="social-item icon-twitter"></a>
+                                        <a href="#" class="social-item icon-facebook-f"></a>
+                                        <a href="#" class="social-item icon-vk"></a>
+                                    </div>
+                                    <a href="#" class="footer-link">cryptomax.io</a>
+                                </div>
+                            </div>
+                            <div class="slide swiper-slide">
+                                <div class="slide-title">Litvinoff <br>trade</div>
+                                <ul class="slide-list">
+                                    <li class="list-item">Team of professional tradersin the stock and cryptocurrency markets</li>
+                                    <li class="list-item">Crypto startup advisors</li>
+                                    <li class="list-item">Training and sales teams</li>
+                                    <li class="list-item">Cryptocurrency media</li>
+                                </ul>
+                                <div class="slide-footer">
+                                    <div class="slide-social">
+                                        <a href="#" class="social-item icon-twitter"></a>
+                                        <a href="#" class="social-item icon-facebook-f"></a>
+                                        <a href="#" class="social-item icon-vk"></a>
+                                    </div>
+                                    <a href="#" class="footer-link">cryptomax.io</a>
+                                </div>
+                            </div>
+                            <div class="slide swiper-slide">
+                                <div class="slide-title">Schpicer<br>official</div>
+                                <ul class="slide-list">
+                                    <li class="list-item">Team of professional tradersin the stock and cryptocurrency markets</li>
+                                    <li class="list-item">Crypto startup advisors</li>
+                                    <li class="list-item">Training and sales teams</li>
+                                    <li class="list-item">Cryptocurrency media</li>
+                                </ul>
+                                <div class="slide-footer">
+                                    <div class="slide-social">
+                                        <a href="#" class="social-item icon-twitter"></a>
+                                        <a href="#" class="social-item icon-facebook-f"></a>
+                                        <a href="#" class="social-item icon-vk"></a>
+                                    </div>
+                                    <a href="#" class="footer-link">cryptomax.io</a>
+                                </div>
+                            </div>
+                            <div class="slide swiper-slide">
+                                <div class="slide-title">Dnevnik<br>Sereji</div>
+                                <ul class="slide-list">
+                                    <li class="list-item">Team of professional tradersin the stock and cryptocurrency markets</li>
+                                    <li class="list-item">Crypto startup advisors</li>
+                                    <li class="list-item">Training and sales teams</li>
+                                    <li class="list-item">Cryptocurrency media</li>
+                                </ul>
+                                <div class="slide-footer">
+                                    <div class="slide-social">
+                                        <a href="#" class="social-item icon-twitter"></a>
+                                        <a href="#" class="social-item icon-facebook-f"></a>
+                                        <a href="#" class="social-item icon-vk"></a>
+                                    </div>
+                                    <a href="#" class="footer-link">cryptomax.io</a>
+                                </div>
+                            </div>
+                            <div class="slide swiper-slide">
+                                <div class="slide-title">Ivan <br>Ivan Alekseev</div>
+                                <ul class="slide-list">
+                                    <li class="list-item">Team of professional tradersin the stock and cryptocurrency markets</li>
+                                    <li class="list-item">Crypto startup advisors</li>
+                                    <li class="list-item">Training and sales teams</li>
+                                    <li class="list-item">Cryptocurrency media</li>
+                                </ul>
+                                <div class="slide-footer">
+                                    <div class="slide-social">
+                                        <a href="#" class="social-item icon-twitter"></a>
+                                        <a href="#" class="social-item icon-facebook-f"></a>
+                                        <a href="#" class="social-item icon-vk"></a>
+                                    </div>
+                                    <a href="#" class="footer-link">cryptomax.io</a>
                                 </div>
                             </div>
                         </div>
-                        <div class="_slider-dots"></div>
+                        <div class="swiper-pagination-bullets"></div>
                     </div>
                 </div>
             </div>
@@ -99,7 +233,7 @@
             <picture><source srcset="img/section-last/bg.webp" type="image/webp"><img src="img/section-last/bg.jpg" alt="background image" class="bg"></picture>
             <div class="last-container">
                 <h2 class="last-title">Try Capico for free per month</h2>
-                <button class="last-button _pricing-btn"><span class="icon-arrow-up">Create an account</span></button>
+                <button class="_newAccount last-button _pricing-btn"><span class="icon-arrow-up">Create an account</span></button>
             </div>
         </section>
     </main>
@@ -144,13 +278,40 @@
                 </ul>
             </div>
             <div class="footer-actions">
-                <button class="sign-btn">Sign in</button>
-                <button class="create">Create an account</button>
+                <button class="sign-btn _sign">Sign in</button>
+                <button class="_newAccount create">Create an account</button>
             </div>
         </div> 
         <div class="footer-copy">© 2022 Capico ltd.</div>
     </div>
 </footer>
-    <script src="js/app.min.js?_v=20230424163914"></script>
+    <div class="sign-modal">
+    <div class="modal-window">
+        <img src="img/section-numbers/border.svg" alt="border">
+        <form action="#" class="sign-form">
+            <label for="formUser">User name</label>
+            <input class="formUser" type="text" name="formUser" required>
+            <label for="formPass">Password</label>
+            <input class="formPass" type="password" name="formPass" required>
+            <button type="submit"><span class="icon-arrow-right">sign in</span></button>
+        </form>
+    </div>
+    <div class="left-bg"><img src="img/gradients/partners.svg" alt="gradient"></div>
+    <div class="right-bg"><img src="img/gradients/header.svg" alt="gradient"></div>
+</div>
+
+<div class="create-modal">
+    <div class="create-window">
+        <form action="#" class="create-form">
+            <input autofocus class="formUser" type="text" name="formUser" required placeholder="Name">
+            <input class="formAge" type="number" name="formAge" required placeholder="Age">
+            <input class="formEmail" type="email" name="formAge" required placeholder="E-mail">
+            <button type="submit"><span class="icon-arrow-right">create account</span></button>
+        </form>
+    </div>
+    <div class="left-bg"><img src="img/gradients/partners.svg" alt="gradient"></div>
+    <div class="right-bg"><img src="img/gradients/header.svg" alt="gradient"></div>
+</div>
+    <script src="js/app.min.js?_v=20230426104837"></script>
 </body>
 </html>
